# lambdachine

./: .ghci  .gitignore  BENCH_TODOs.md  HACKING.markdown  LICENSE  Makefile  Makefile.in  README.markdown  TODOs.markdown  bc.c  bc.h  bci.S  boot  closure_types.h  configure.in  def.h  done.txt  index.html  install-deps.sh  lambdachine.cabal  mm.c  reference-bci.c  vm.c  vm.h
compiler/: LICENSE  Main.hs
compiler/Ghc/Api/: Pipeline.hs  Pipeline70.hs  Pipeline74.hs  V76.hs  V76Hsc.hs  V78.hs
compiler/Ghc/Api/Pipeline/: Types.hs
compiler/Lambdachine/: Builtin.hs  Core.hs  Eval.hs  Grin.hs  Id.hs  Name.hs  Options.hs  Serialise.hs  Stg.hs  Type.hs  Utils.hs
compiler/Lambdachine/Ghc/: CoreToBC.hs  CoreToBC.old.hs  CoreToGrin.hs  Pipeline.hs  StgToBytecode.hs  Utils.hs
compiler/Lambdachine/Grin/: Analyse.hs  BC2.hs  Bytecode.hs  Eval.hs  Interp.hs  Liveness.hs  Lower.hs  RegAlloc.hs  RegAlloc2.hs  RegAllocLinearScan.hs  ZipCFG.hs
compiler/Lambdachine/Interp/: Exec.hs  Html.hs  Trace.hs  Types.hs
compiler/Lambdachine/Utils/: Convert.hs  IO.hs  Pretty.hs  Unique.hs  UniqueMap.hs  UniqueSet.hs
compiler/Lambdachine/Utils/Graph/: Base.hs  Colour.hs  Ops.hs
docs/: bench.gnu  luajit-notes.markdown  memo_001.markdown  memo_002.markdown  memo_003.markdown  memo_004.markdown  memo_008.markdown  notebook.org  ra.markdown  reuse_spills.markdown  selfcheck.markdown  todos.markdown
experiments/old-sketches/: arch.h  closures.h  def.h  dispatch.s  gen_offs.c  info-tables.h  main.c  mm.h  opcodes.h
experiments/old-vm/: Bitset.c  Bytecode.c  Capability.c  FileUtils.c  HAMT.c  HashTable.h  Interp.h  InterpIR.c  Main.c  Makefile  PrintClosure.c  Record.c  StorageManager.c  Thread.c  test1.c
experiments/old-vm/codegen/: AsmCodeGen.h  AsmTarget_x64.h  InterpAsm.c  InterpAsm.h  RA_debug.h
experiments/old-vm/includes/: Arch.h  Bitset.h  Closure.h  Common.h  FileUtils.h  HeapInfo.h  IR.h  InfoTables.h  Jit.h  Loader.h  MiscClosures.h  Opcodes.h  Opts.h  PrintIR.h  Thread.h
includes/: Arch.h  Bitset.h  Bytecode.h  Capability.h  Common.h  Config.h  FileUtils.h  HeapInfo.h  IR.h  InfoTables.h  Jit.h  Loader.h  MiscClosures.h  Opts.h  PrintClosure.h  PrintIR.h  Snapshot.h  Stats.h  StorageManager.h  Thread.h  VM.h
libraries/: bootstrap-bytecode.sh
libraries/base/: recipe  recipe.in
libraries/base/Control/Exception/: Base.hs
libraries/base/Data/: Char.hs  Either.hs  List.hs  Maybe.hs  Monoid.hs  Tuple.hs
libraries/base/GHC/: Base.hs  Classes.hs  Enum.hs  Err.hs  Err.hs-boot  Exception.hs-boot  IO.hs  List.hs  Num.hs  Read.hs  Real.hs  ST.hs  Show.hs  Show.hs-boot  Unicode.hs
libraries/base/Text/: Read.hs
libraries/base/Text/ParserCombinators/: ReadP.hs
libraries/base/Text/Read/: Lex.hs
libraries/containers/: recipe.in
libraries/containers/Data/: Map.hs
libraries/ghc-prim/: recipe  recipe.in
libraries/ghc-prim/GHC/: Bool.hs  CString.hs  Classes.hs  Tuple.hs  Types.hs  Unit.hs
libraries/integer-simple/: recipe  recipe.in
libraries/integer-simple/GHC/: Integer.hs
libraries/integer-simple/GHC/Integer/: Type.hs
libraries/rts/: recipe  recipe.in
mk/: build.mk.sample
rts/: Bitset.c  Bytecode.c  Capability.c  ClosureFlags.c  FileUtils.c  GC.c  HashTable.c  HashTable.h  HeapInfo.c  Interp.h  InterpIR.c  InterpThreaded.c  Jit.c  Loader.c  Main.c  MiscClosures.c  OptimiseIR.c  PrintClosure.c  PrintIR.c  Record.c  ShadowHeap.c  Snapshot.c  Stats.c  StorageManager.c  Thread.c  t1.c
rts/codegen/: AsmCodeGen.c  AsmCodeGen.h  AsmTarget.h  AsmTarget_x64.h  Emit_x64.h  InterpAsm.c  MCode.c  MCode.h  RA_debug.h
tests/: Bc0003.hs  Bc0005.hs  Bc0010.hs  Bc0011.hs  Bc0012.hs  Makefile  MutRecA.hs  MutRecB.hs  MutRecB.hs-boot  PreludeTests.hs  bc0001.hs  binarytrees.hs  lit.cfg  lit.user.cfg.example  loop.hs  simpl0001.hs  sumfromto.hs
tests/Bc/: Alloc1.hs  Basic0001.hs  Basic0002.hs  Basic0003.hs  Basic0004.hs  Basic0005.hs  Basic0006.hs  Bc0001.hs  Bc0002.hs  Bc0003.hs  Bc0004.hs  Bc0005.hs  Bc0006.hs  Bc0007.hs  Bc0008.hs  Bc0009.hs  Bc0010.hs  Bc0011.hs  Bc0012.hs  Bc0013.hs  Bc0014.hs  Bc0016.hs  Bc0017.hs  BitOps.hs  Compile1.hs  Compile2.hs  Compile3.hs  EvalThunk.hs  Gc01.hs  Gc02.hs  Gc03.hs  Integer.hs  Jit0001.hs  Jit0002.hs  Jit0003.hs  Jit0004.hs  Jit0005.hs  Jit0006.hs  Jit0007.hs  Jit0008.hs  (+41 more)
tests/Bench/: Append.hs  Exp3_8.hs  Primes.hs  SumFromTo1.hs  SumFromTo2.hs  SumFromTo3.hs  SumFromTo4.hs  SumSquare1.hs  SumStream.hs  SumTree.hs  Tak.hs  WheelSieve2.hs
tests/Bench/Fibon/Agum/: IntLinEq.hs  Main.hs  UnificationMatching.hs
tests/Bench/Nofib/Spectral/: Boyer.hs  Circsim.hs  Constraints.hs  Lambda.hs
tests/Exclude/: pidigits.hs  tree2.hs
tests/GHC/: Bool.hs
tests/Test/: Basic0001.hs  Basic0002.hs  Basic0003.hs  Basic0004.hs  Basic0005.hs  Basic0006.hs  Basic0007.hs  Basic0008.hs  Bench_Primes.hs  Ffi0001.hs  Small0001.hs  Small0002.hs  Small0003.hs
tests/Toys/: Ackermann.hs
tests/base/Control/: Monad.hs
tests/base/Data/: List.hs  Set.hs
tests/base/GHC/: Base.hs  Classes.hs  Enum.hs  List.hs  Num.hs  Read.hs  Real.hs  Show.hs
tests/base/Simple/Data/: Char.hs
tests/base/Text/: Read.hs
tests/base/Text/ParserCombinators/: ReadP.hs  ReadPrec.hs
tests/base/Text/Read/: Lex.hs
tests/gc-test/: gc-test.cc
tests/ghc-prim/GHC/: Ordering.hs  Tuple.hs  Types.hs  Unit.hs
tests/integer-gmp/GHC/: Integer.hs
tests/programs/: gmptest.cc
utils/: filecheck.py  genirfoldmacros.cc  genopcodes.c  genopcodes.cc  print_config.c  runbenchmarks.sh  showasmdump.sh  valgrind-gdb
utils/lit/lit/: Test.py  TestRunner.py
vm/: arch.hh  assembler-debug.hh  assembler.cc  assembler.hh  bcdump.cc  bytecode.cc  bytecode.hh  capability.cc  capability.hh  common.hh  config.hh  fileutils.cc  fileutils.hh  ir-inl.hh  ir.cc  ir.hh  ir_fold.cc  jit.cc  jit.hh  libffitest.cc  loader.cc  loader.hh  machinecode.cc  main.cc  memorymanager.cc  memorymanager.hh  miscclosures.cc  miscclosures.hh  objects.cc  objects.hh  options.cc  options.hh  thread.cc  thread.hh  time.cc  time.hh  unittest.cc  utils.hh  vm.hh
vm/amd64/: codegen.cc  codegen.hh  fragment.cc
(+2 files in other folders)
