Name:                lambdachine
Version:             0.1
Synopsis:            Trace-based Haskell compiler
Homepage:            https://github.com/nominolo/lambdachine
License:             BSD3
License-file:        LICENSE
Author:              Thomas Schilling
Category:            Compiler
Build-type:          Simple
Cabal-version:       >=1.10

Executable lcc
  Build-depends:    ghc             >= 7.6 && < 7.9
                  , base
                  , filepath
                  , process
                  , directory
                  , containers
                  , ghc-paths       == 0.1.*
                  , cmdargs         >= 0.6   && < 0.11
                  , transformers    >= 0.3
                  , mtl             == 2.*
                  , blaze-builder   >= 0.2   && < 0.4
                  , vector          >= 0.7   && < 0.11
                  , utf8-string     == 0.3.*
                  , bytestring
                  , array
                  , ansi-wl-pprint  == 0.6.*
                  , binary          >= 0.5 && < 0.8
                  , uniplate        == 1.6.*
                  , hoopl           >= 3.9 && < 3.11
                  , value-supply    == 0.6.*
                  , graph-serialize >= 0.2
                  , temporary       == 1.1.*
                  , deepseq         == 1.3.*
  Hs-Source-Dirs:   compiler
  Main-Is:          Main.hs
  Default-Language: Haskell2010
  Ghc-Options:    -rtsopts
